--- a/Site/index.html
+++ b/Site/index.html
@@ -8,6 +8,15 @@
   <title>Origin Six</title>
 </head>
 <body>
-
+  <header>
+    <h1>Beauty<span>salon</span>.</h1>
+    <p>...</p>
+  </header>
+  <section>
+    <img src="" alt="">
+    <h1>Saúde natural para os seus cabelos</h1>
+    <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais</p>
+    <button>Agendar um hórario</button>
+  </section>
 </body>
 </html>
