--- a/Site/index.html
+++ b/Site/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Origin Six</title>
-</head>
-<body>
-  <header>
-    <h1>Beauty<span>salon</span>.</h1>
-    <p>...</p>
-  </header>
-  <section>
-    <img src="" alt="">
-    <h1>Saúde natural para os seus cabelos</h1>
-    <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais</p>
-    <button>Agendar um hórario</button>
-  </section>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Origin Six</title>
+  </head>
+  <body>
+    <header class="menu">
+      <nav class="container">
+        <a href=""> Beauty<span>salon</span>.</a>
+        <p>...</p>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <div class="container">
+          <img src="" alt="" />
+          <h1>Saúde natural para os seus cabelos</h1>
+          <p>
+            Um salão exclusivo em São Paulo, especializado em tratamentos
+            naturais
+          </p>
+          <button>Agendar um hórario</button>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
