--- a/Site/index.html
+++ b/Site/index.html
@@ -5,20 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Origin Six</title>
   </head>
   <body>
-    <header class="menu">
+    <header class="header">
       <nav class="container">
-        <a href=""> Beauty<span>salon</span>.</a>
-        <p>...</p>
+        <a class="logo" href=""> Beauty<span>salon</span>.</a>
+        <div class="menu"><a href="">...</a></div>
       </nav>
     </header>
 
     <main>
       <section>
         <div class="container">
-          <img src="" alt="" />
+          <img
+            src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+            alt=""
+          />
           <h1>Saúde natural para os seus cabelos</h1>
           <p>
             Um salão exclusivo em São Paulo, especializado em tratamentos
