--- a/Site/index.html
+++ b/Site/index.html
@@ -12,31 +12,96 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/Site/img/icons/style.css" />
     <title>Origin Six</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <nav class="container">
         <a class="logo" href=""> Beauty<span>salon</span>.</a>
-        <div class="menu"><a href="">...</a></div>
+
+        <!--MENU-->
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#depoiments">Depoimentos</a></li>
+            <li><a class="title" href="#contat">Contato</a></li>
+          </ul>
+          <!-- /MENU-->
+          <div class="icon-menu">...</div>
+          <div class="icon-close">x</div>
+        </div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div class="container">
-          <img
-            src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-            alt=""
-          />
-          <h1>Saúde natural para os seus cabelos</h1>
-          <p>
-            Um salão exclusivo em São Paulo, especializado em tratamentos
-            naturais
-          </p>
-          <button>Agendar um hórario</button>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt=""
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais
+            </p>
+            <button>Agendar um horário</button>
+          </div>
         </div>
       </section>
+      <div class="divider-1"></div>
+      <!--Quebra linha-->
     </main>
+
+    <section class="section">
+      <div class="container">
+        <h1>text 01</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ipsum
+          impedit fugiat tenetur facere dolorum asperiores possimus voluptate
+          libero tempore? Maiores minima illum ut harum blanditiis aliquam odio,
+          dolores velit!
+        </p>
+      </div>
+    </section>
+
+    <div class="divider-1"></div>
+    <!--Quebra linha-->
+
+    <section class="section">
+      <div class="container">
+        <h1>text 02</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit ipsa
+          et voluptatum optio. Minima, voluptatibus porro ab fugit dolorum
+          dignissimos inventore saepe amet quidem maiores aliquid? Facere
+          voluptate eaque fugiat!
+        </p>
+      </div>
+    </section>
+
+    <div class="divider-1"></div>
+    <!--Quebra linha-->
+
+    <section class="section">
+      <div class="container">
+        <h1>text 03</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+          sapiente corrupti ex nemo, nihil laborum perspiciatis odit tenetur
+          repudiandae ea modi repellat sint. Iusto dolore quos, nesciunt libero
+          itaque eveniet.
+        </p>
+      </div>
+    </section>
+
+    <div class="divider-1"></div>
+    <!--Quebra linha-->
   </body>
 </html>
