--- a/Site/index.html
+++ b/Site/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+    <link rel="stylesheet" href="/Site/img/icons/style.css" />
 
     <!-- Swiper -->
     <link
@@ -16,7 +16,7 @@
     />
 
     <!-- STYLES -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Site/css/style.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -282,6 +282,6 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- main.js -->
-    <script src="main.js"></script>
+    <script src="/Site/js/javaScript.js"></script>
   </body>
 </html>
