--- a/Site/index.html
+++ b/Site/index.html
@@ -231,7 +231,7 @@
               ouvir suas críticas e sugestões.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário"
+              href="https://api.whatsapp.com/send?phone=+5548984274450&text=Oi! Gostaria de agendar um horário"
               class="button"
               target="_blank"
               ><i class="icon-whatsapp"></i> Entrar em contato</a
@@ -240,9 +240,9 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i> 11 99845-6754</li>
-              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+              <li><i class="icon-"></i> (48) 98427-4450</li>
+              <li><i class="icon-map-pin"></i> R. Lorem Ipsum, 239</li>
+              <li><i class="icon-mail"></i> empresa@beautysalon.com</li>
             </ul>
           </div>
         </div>
@@ -255,13 +255,13 @@
       <div class="container grid">
         <div class="brand">
           <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-          <p>©2021 Beautysalon.</p>
-          <p>Todos os direitos reservados.</p>
+          <p>©2021 BeautySalon.</p>
+          <p>Todos os direitos reservados!</p>
         </div>
 
         <div class="social grid">
           <a href="https://instagram.com" target="_blank">
-            <i class="icon-instagram"></i>
+            <i class="icon-phone"></i>
           </a>
           <a href="https://facebook.com" target="_blank">
             <i class="icon-facebook"></i
