--- a/Site/index.html
+++ b/Site/index.html
@@ -240,9 +240,9 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-"></i> (48) 98427-4450</li>
+              <li><i class="icon-phone"></i> (48) 98427-4450</li>
               <li><i class="icon-map-pin"></i> R. Lorem Ipsum, 239</li>
-              <li><i class="icon-mail"></i> empresa@beautysalon.com</li>
+              <li><i class="icon-menu"></i> empresa@beautysalon.com</li>
             </ul>
           </div>
         </div>
@@ -261,7 +261,7 @@
 
         <div class="social grid">
           <a href="https://instagram.com" target="_blank">
-            <i class="icon-phone"></i>
+            <i class="icon-instagram"></i>
           </a>
           <a href="https://facebook.com" target="_blank">
             <i class="icon-facebook"></i
