--- a/Site/index.html
+++ b/Site/index.html
@@ -7,7 +7,7 @@
     <title>OriginSix</title>
 
     <!-- Icones -->
-    <link rel="stylesheet" href="/Site/img/icons/style.css" />
+    <link rel="stylesheet" href="/Site/assets/fonts/style.css" />
 
     <!-- Swiper -->
     <link
