--- a/Site/index.html
+++ b/Site/index.html
@@ -242,7 +242,7 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> (48) 98427-4450</li>
               <li><i class="icon-map-pin"></i> R. Lorem Ipsum, 239</li>
-              <li><i class="icon-menu"></i> empresa@beautysalon.com</li>
+              <li><i class="icon-mail"></i> empresa@beautysalon.com</li>
             </ul>
           </div>
         </div>
